sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:3: error: not found: value lgr
  val ecart = lgr
              ^AlgCombSort:5: error: not found: value echange_pos
  val echange_pos(Boolean)=true
      ^AlgCombSort:7: error: not found: value echange_pos
    echange_pos=false
    ^AlgCombSort:14: error: not found: value echange_pos
        echange_pos=true
        ^AlgCombSort:16: error: reassignment to val
      i=i+1
       ^